# winui3_cmake

./: CMakeLists.txt  LICENSE  README.md  packages.config
.github/workflows/: cmake-multi-platform.yml
cmake/: XamlMetaDataProvider.cpp.template  XamlMetaDataProvider.idl.template  arch_name.cmake  check_nuget_package.cmake  compile_xaml.cmake  find_appsdk_winmds.cmake  find_platform_winmds.cmake  generate_XamlMetaDataProvider.cmake  generate_winappsdk.cmake  json.cmake  make_pri.cmake  merge_winmds.cmake  nuget.cmake  require_arguments.cmake  run_cppwinrt.cmake  sdk_buildtools.cmake  target_xaml_compile.cmake  target_xaml_sources.cmake  win10sdk_root.cmake  winmd_from_idl.cmake  wrap_makepri.ps1
samples/: CMakeLists.txt  README.md
samples/MiniWinUITest/: CMakeLists.txt  README.md
samples/simple/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  app.manifest
